Bug 425135 - GHNS windows: Addons list should immediately be updated after we uninstall an addon while "Installed only" or "Updateable only" filters are selected
Summary: GHNS windows: Addons list should immediately be updated after we uninstall an...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
: 418037 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-08 11:27 UTC by Patrick Silva
Modified: 2020-09-01 08:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.74
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-08-08 11:27:13 UTC
STEPS TO REPRODUCE
1. open a GHNS window when an addon update is available
2. set the first dropdown on bottom to "Updateable only"
3. hover over an addon and click on "Uninstall" button

OBSERVED RESULT
the addon is uninstalled as expected but it is still listed

EXPECTED RESULT
not installed addon should not be listed while "Updateable only" filter is selected

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2
Comment 1 Patrick Silva 2020-08-10 11:06:36 UTC
humm, if "Installed only" filter is selected, addon is still listed after uninstalling.
Comment 2 Patrick Silva 2020-08-10 18:39:30 UTC
*** Bug 418037 has been marked as a duplicate of this bug. ***
Comment 3 Alexander Lohnau 2020-08-31 09:24:50 UTC
This is only an issue with the new QtQuick dialog. The QWidgets one has no updatable sort mode and when using the installed filter and uninstalling an entry you see the "Install again" button .
Comment 4 Bug Janitor Service 2020-08-31 09:51:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/44
Comment 5 Alexander Lohnau 2020-09-01 08:59:05 UTC
Git commit 8531bbcc004bdafa0a0c6060966c2daec457b776 by Alexander Lohnau.
Committed on 31/08/2020 at 09:45.
Pushed by alex into branch 'master'.

Remove entries if they do not match filter anymore

The state of the entries already gets updated, but
they are still contained in the list of entries
that match the filter. So we have to remove it.
FIXED-IN: 5.74

M  +8    -0    src/qtquick/quickitemsmodel.cpp

https://invent.kde.org/frameworks/knewstuff/commit/8531bbcc004bdafa0a0c6060966c2daec457b776