Remove entries if they do not match filter anymore

The state of the entries already gets updated, but
they are still contained in the list of entries
that match the filter. So we have to remove it.

BUG: 425135
FIXED-IN: 5.74